Project

General

Profile

Actions

Bug #21185

closed

Range#overlap? is not commutative with doubly-unbounded range argument.

Bug #21185: Range#overlap? is not commutative with doubly-unbounded range argument.

Added by jeromepl (Jerome Parent-Levesque) over 1 year ago. Updated over 1 year ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.4.1 (2024-12-25 revision 48d4efcb85) +PRISM [arm64-darwin24]
[ruby-core:121372]

Description

In https://bugs.ruby-lang.org/issues/20725 the following:

(nil..nil).overlap?(..3)

was fixed to output true instead of false.

However, when reversing the order of the arguments the output is wrong:

(..3).overlap?(nil..nil) # => Outputs `false` but should be `true`

I would like to attempt to fix this bug and will take a look at it this weekend.


Related issues 1 (0 open1 closed)

Has duplicate Ruby - Bug #21285: Range#overlap? returns false for (nil..nil)ClosedActions

Updated by Anonymous over 1 year ago Actions #2

  • Status changed from Open to Closed

Applied in changeset git|b5cdbadeeddd2b8e834b9d5565c13fcc43f3e684.


[Bug #21185] Fix Range#overlap? with infinite range
Infinite ranges, i.e. unbounded ranges, should overlap with any other range
which wasn't the case in the following example: (0..3).overlap?(nil..nil)

Updated by mame (Yusuke Endoh) over 1 year ago Actions #3

  • Has duplicate Bug #21285: Range#overlap? returns false for (nil..nil) added
Actions

Also available in: PDF Atom