[Bug #21185] Fix Range#overlap? with infinite range Infinite ranges, i.e. unbounded ranges, should overlap with any other range which wasn't the case in the following example: (0..3).overlap?(nil..nil)